vue.jsでレンダリング

--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,9 @@
     </head>
 
     <body>
-        <p>にゃーん</p>
+        <div id="app">
+            {{ message }}
+        </div>
         <script src="bundle.js"></script>
     </body>
 </html>
