--- a/static/index.html
+++ b/static/index.html
@@ -10,31 +10,7 @@
     <body>
         <div id="app">
             <div class="flex-container">
-                <div><p>1</p></div>
-                <div><p>2</p></div>
-                <div><p>3</p></div>
-                <div><p>4</p></div>
-                <div><p>5</p></div>
-                <div><p>6</p></div>
-                <div><p>7</p></div>
-                <div><p>8</p></div>
-                <div><p>9</p></div>
-                <div><p>10</p></div>
-                <div><p>11</p></div>
-                <div><p>12</p></div>
-                <div><p>13</p></div>
-                <div><p>14</p></div>
-                <div><p>15</p></div>
-                <div><p>16</p></div>
-                <div><p>17</p></div>
-                <div><p>18</p></div>
-                <div><p>19</p></div>
-                <div><p>20</p></div>
-                <div><p>21</p></div>
-                <div><p>22</p></div>
-                <div><p>23</p></div>
-                <div><p>24</p></div>
-                <div><p>25</p></div>
+                <div v-for="item in items"><p>{{ item }}</p></div>
              </div>
         </div>
         <script src="bundle.js"></script>
