--- a/static/index.html
+++ b/static/index.html
@@ -24,15 +24,7 @@
             </div>
 
             <div v-else-if="state === 'analyzed'">
-                <h1 v-on:click="showFollowEachOther = !showFollowEachOther">
-                    followEachOther
-                    <span v-if="!showFollowEachOther">▼</span>
-                </h1>
-                <transition name="fade">
-                    <div v-if="showFollowEachOther" class="flex-container follow-each-other">
-                        <div v-for="item in followEachOther"><p>{{ item }}</p></div>
-                    </div>
-                </transition>
+                <user-list name="followEachOther" v-bind:list="followEachOther"></user-list>
 
                 <h1 v-on:click="showFollowedOnly = !showFollowedOnly">
                     followedOnly
