CSSクラス指定をコンポーネント呼び出し側に移行

--- a/static/index.html
+++ b/static/index.html
@@ -24,7 +24,7 @@
             </div>
 
             <div v-else-if="state === 'analyzed'">
-                <user-list name="followEachOther" v-bind:list="followEachOther"></user-list>
+                <user-list name="followEachOther" v-bind:list="followEachOther" class="follow-each-other"></user-list>
 
                 <h1 v-on:click="showFollowedOnly = !showFollowedOnly">
                     followedOnly
